[gd_scene load_steps=4 format=3 uid="uid://b3r1j7617sf47"]

[ext_resource type="Script" uid="uid://btix5apka534b" path="res://Scripts/Enemies/espectro.gd" id="1_xwbeq"]
[ext_resource type="Texture2D" uid="uid://fnedwphsavuw" path="res://Assets/Enemies/espectro.png" id="2_skn1h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_35eg6"]
size = Vector2(52, 52)

[node name="Espectro" type="Area2D" groups=["Enemies"]]
script = ExtResource("1_xwbeq")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(3.2, 3.2)
texture = ExtResource("2_skn1h")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_35eg6")

[node name="AttackTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
